--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "npm": "^7.6.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.1",
     "react-mapbox-gl": "^5.1.1",
     "react-router-dom": "^5.2.0",
